Adicionando nomes no analytics

--- a/analytics.ipynb
+++ b/analytics.ipynb
@@ -17,15 +17,22 @@
     "\n",
     "- This notebook represents the project quality analysis of the date exposed right above. \n",
     "\n",
-    "### TEAM:\n",
+    "### TEAM: DNIT\n",
     "\n",
-    "##### Semester: YYYY/0X\n",
+    "##### Semester: 2023/01\n",
     "##### Professor: Hilmer Neri\n",
     "\n",
     "##### Members:\n",
     "\n",
-    "- Member x\n",
-    "- Member y\n"
+    "- Antônio Ferreira de Castro Neto\n",
+    "- Denys Rogeres Leles\n",
+    "- Felipe Augustini\n",
+    "- Isadora da Cruz Galvão\n",
+    "- João Gabriel de Campos\n",
+    "- Lucas Rodrigues Fonseca\n",
+    "- Yan Andrade\n",
+    "\n",
+    "\n"
    ]
   },
   {
