adicionando nomes de mds

--- a/analytics.ipynb
+++ b/analytics.ipynb
@@ -25,12 +25,22 @@
     "##### Members:\n",
     "\n",
     "- Antônio Ferreira de Castro Neto\n",
-    "- Denys Rogeres Leles\n",
+    "- Artur Rodrigues\n",
+    "- Carolina\n",
+    "- Denys Rogeres\n",
     "- Felipe Augustini\n",
+    "- Guilherme Soares\n",
     "- Isadora da Cruz Galvão\n",
     "- João Gabriel de Campos\n",
+    "- Julia Souza\n",
+    "- Letícia\n",
     "- Lucas Rodrigues Fonseca\n",
+    "- Mateus Orlando\n",
+    "- Miguel de Frias\n",
+    "- Pedro Braga\n",
+    "- Ricardo Augusto\n",
     "- Yan Andrade\n",
+    "- Yan Luca\n",
     "\n",
     "\n"
    ]
